<resources>
    <string name="app_name">Chivox Speech Assessment</string>

    <string name="txt_word">Word</string>
    <string name="txt_sentence">Sentence</string>
    <string name="txt_paragraph">Paragraph</string>
    <string name="txt_en_choc_score">Multiple Choice</string>
    <string name="txt_en_scne_exam">Situational Dialogue</string>
    <string name="txt_en_prtl_exam">Speaking with picture</string>
    <string name="txt_en_asr_rec">ASR</string>
    <string name="record">record</string>
    <string name="stop">stop</string>
    <string name="txt_show_answer">Show reference answer</string>
    <string name="txt_hide_answer">Hide reference answer</string>

</resources>